# Test

C/: CMakeLists.txt  IotToilet.c  Makefile  createIotToiletInput.c  semPrintArrays.c  semPrintTwoArray.c  shmQSendRecv.c
C/inc/: prog.h
C/src/: semPrintArrays.c  shmQSendRecv.c
C/test/: test_main.c
Cpp/: CMakeLists.txt  Makefile  maidensBanraku.cpp  main.cpp
Cpp/inc/: udemy.h
Cpp/src/: udemy.cpp
Cpp/test/: cppTest.cpp
